--- a/partner1.html
+++ b/partner1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Partner 1's Questions 💖</h1>
+        <h1>Partner 1's Detail💖</h1>
         <form id="partner1Form">
             <input type="text" id="name1" placeholder="Your Name" required>
             <select id="zodiac1" required>
