--- a/partner2.html
+++ b/partner2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Partner 2's Questions 💖</h1>
+        <h1>Partner 2's Detail💖</h1>
         <form id="partner2Form">
             <input type="text" id="name2" placeholder="Your Name" required>
             <select id="zodiac2" required>
