--- a/results.html
+++ b/results.html
@@ -14,7 +14,16 @@
         <audio id="loveSong" controls></audio>
         <button class="try-again-btn" id="tryAgainBtn">
             Try Again <span class="icon">🔄</span>
-         </button>
+         </button><!-- Music Player -->
+<audio controls>
+    <audio id="loveSong" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+<!-- Try Again Button -->
+<a href="index.html" class="try-again">
+    Try Again <i class="fas fa-sync-alt"></i>
+</a>
          
     </div>
 
