--- a/questions2.html
+++ b/questions2.html
@@ -198,7 +198,7 @@
                  "I'm not sure"] }
             ];
 
-            const questionsContainer = document.getElementById("questionsContainer");
+            const questionsContainer = document.getElementById("questionsContainer2");
 
             questions.forEach((q,
              index) => {
