--- a/questions2.html
+++ b/questions2.html
@@ -221,6 +221,7 @@
                 window.location.href = "results.html";  // ✅ Redirect to results page
             });
         });
+        <script src="script.js"></script>
     </script>
 </body>
 </html>
