--- a/questions.html
+++ b/questions.html
@@ -254,6 +254,7 @@
                 window.location.href = "questions2.html"; // Redirect to Partner 2's questions
             });
         });
+         <script src="script.js"></script>
     </script>
 </body>
 </html>
