--- a/questions.html
+++ b/questions.html
@@ -7,6 +7,7 @@
      initial-scale=1.0">
     <title>Partner 1 Questions</title>
     <link rel="stylesheet" href="style.css">
+     <script src="script.js"></script>
 </head>
 <body>
     <h2>Partner 1,
