--- a/questions2.html
+++ b/questions2.html
@@ -209,7 +209,7 @@
                 
                 // Add "Other" option with an input box for custom answer
                 div.innerHTML += `
-                    <input type="radio" name="answer${index}" value="Other" id="otherOption${index}"> Other:
+                    <input type="radio" name="answer${index}" value="Other" id="otherOption${index}"required> Other:
                     <input type="text" id="otherAnswer${index}" placeholder="Please specify" disabled><br>
                 `;
                 
